--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Owlund</title>
-  <style>
-    body {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      background-color: #f5f5f5;
-      color: #222;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    a {
-      color: #333;
-      text-decoration: none;
-      margin: 0.25rem;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .links {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  </style>
-</head>
-<body>
-  <h1>Oliver L. Wolcott</h1>
-  <div class="links">
-    <a href="mailto:oliver@owlund.com">[email protected]</a>
-    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-    <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-    <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
-  </div>
-</body>
-</html>
+{\rtf1\ansi\ansicpg1252\cocoartf2822
+\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+{\*\expandedcolortbl;;}
+\margl1440\margr1440\vieww11520\viewh8400\viewkind0
+\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+
+\f0\fs24 \cf0 <!DOCTYPE html>\
+<html lang="en">\
+<head>\
+  <meta charset="UTF-8">\
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">\
+  <title>Owlund</title>\
+  <style>\
+    body \{\
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;\
+      background-color: #f5f5f5;\
+      color: #222;\
+      display: flex;\
+      flex-direction: column;\
+      align-items: center;\
+      justify-content: center;\
+      height: 100vh;\
+      margin: 0;\
+    \}\
+    h1 \{\
+      font-size: 2rem;\
+      margin-bottom: 1rem;\
+    \}\
+    a \{\
+      color: #333;\
+      text-decoration: none;\
+      margin: 0.25rem;\
+    \}\
+    a:hover \{\
+      text-decoration: underline;\
+    \}\
+    .links \{\
+      display: flex;\
+      flex-direction: column;\
+      align-items: center;\
+    \}\
+  </style>\
+</head>\
+<body>\
+  <h1>Oliver L. Wolcott</h1>\
+  <div class="links">\
+    <a href="mailto:oliver@owlund.com">oliver@owlund.com</a>\
+    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>\
+    <a href="https://github.com/yourusername" target="_blank">GitHub</a>\
+    <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>\
+  </div>\
+</body>\
+</html>\
+}
