--- a/index.html
+++ b/index.html
@@ -8,48 +8,61 @@
 \f0\fs24 \cf0 <!DOCTYPE html>\
 <html lang="en">\
 <head>\
-  <meta charset="UTF-8">\
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-  <title>Owlund</title>\
-  <style>\
-    body \{\
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;\
-      background-color: #f5f5f5;\
-      color: #222;\
-      display: flex;\
-      flex-direction: column;\
-      align-items: center;\
-      justify-content: center;\
-      height: 100vh;\
-      margin: 0;\
-    \}\
-    h1 \{\
-      font-size: 2rem;\
-      margin-bottom: 1rem;\
-    \}\
-    a \{\
-      color: #333;\
-      text-decoration: none;\
-      margin: 0.25rem;\
-    \}\
-    a:hover \{\
-      text-decoration: underline;\
-    \}\
-    .links \{\
-      display: flex;\
-      flex-direction: column;\
-      align-items: center;\
-    \}\
-  </style>\
+  <meta charset="UTF-8" />\
+  <meta name="viewport" content="width=device-width, initial-scale=1">\
+  <title>Oliver L. Wolcott</title>\
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />\
 </head>\
 <body>\
-  <h1>Oliver L. Wolcott</h1>\
-  <div class="links">\
-    <a href="mailto:oliver@owlund.com">oliver@owlund.com</a>\
-    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>\
-    <a href="https://github.com/yourusername" target="_blank">GitHub</a>\
-    <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>\
-  </div>\
+\
+  <nav class="container-fluid">\
+    <ul>\
+      <li><strong>Oliver L. Wolcott</strong></li>\
+    </ul>\
+    <ul>\
+      <li><a href="#">Home</a></li>\
+      <li><a href="#">About</a></li>\
+      <li><a href="#" role="button">Contact</a></li>\
+    </ul>\
+  </nav>\
+\
+  <main class="container">\
+    <div class="grid">\
+      <section>\
+        <hgroup>\
+          <h2>Oliver L. Wolcott</h2>\
+          <h3>Contact Information</h3>\
+        </hgroup>\
+        <p>You can reach me directly via email at <a href="mailto:OliverL.Wolcott@owlund.com">OliverL.Wolcott@owlund.com</a>.</p>\
+\
+        <h3>Social Media</h3>\
+        <p>Links coming soon.</p>\
+      </section>\
+    </div>\
+  </main>\
+\
+  <section aria-label="Subscribe example">\
+    <div class="container">\
+      <article>\
+        <hgroup>\
+          <h2>Stay Connected</h2>\
+          <h3>Subscribe for future updates</h3>\
+        </hgroup>\
+        <form class="grid">\
+          <input type="text" id="firstname" name="firstname" placeholder="Your name" aria-label="First name" required />\
+          <input type="email" id="email" name="email" placeholder="Email address" aria-label="Email address" required />\
+          <button type="submit" onclick="event.preventDefault()">Subscribe</button>\
+        </form>\
+      </article>\
+    </div>\
+  </section>\
+\
+  <footer class="container">\
+    <small>\
+      <a href="#">Privacy Policy</a> \'95 <a href="#">Terms of Use</a>\
+    </small>\
+  </footer>\
+\
 </body>\
 </html>\
 }
