--- a/index.html
+++ b/index.html
@@ -1,68 +1,60 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Oliver L. Wolcott</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
+</head>
+<body>
 
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-  <meta charset="UTF-8" />\
-  <meta name="viewport" content="width=device-width, initial-scale=1">\
-  <title>Oliver L. Wolcott</title>\
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />\
-</head>\
-<body>\
-\
-  <nav class="container-fluid">\
-    <ul>\
-      <li><strong>Oliver L. Wolcott</strong></li>\
-    </ul>\
-    <ul>\
-      <li><a href="#">Home</a></li>\
-      <li><a href="#">About</a></li>\
-      <li><a href="#" role="button">Contact</a></li>\
-    </ul>\
-  </nav>\
-\
-  <main class="container">\
-    <div class="grid">\
-      <section>\
-        <hgroup>\
-          <h2>Oliver L. Wolcott</h2>\
-          <h3>Contact Information</h3>\
-        </hgroup>\
-        <p>You can reach me directly via email at <a href="mailto:OliverL.Wolcott@owlund.com">OliverL.Wolcott@owlund.com</a>.</p>\
-\
-        <h3>Social Media</h3>\
-        <p>Links coming soon.</p>\
-      </section>\
-    </div>\
-  </main>\
-\
-  <section aria-label="Subscribe example">\
-    <div class="container">\
-      <article>\
-        <hgroup>\
-          <h2>Stay Connected</h2>\
-          <h3>Subscribe for future updates</h3>\
-        </hgroup>\
-        <form class="grid">\
-          <input type="text" id="firstname" name="firstname" placeholder="Your name" aria-label="First name" required />\
-          <input type="email" id="email" name="email" placeholder="Email address" aria-label="Email address" required />\
-          <button type="submit" onclick="event.preventDefault()">Subscribe</button>\
-        </form>\
-      </article>\
-    </div>\
-  </section>\
-\
-  <footer class="container">\
-    <small>\
-      <a href="#">Privacy Policy</a> \'95 <a href="#">Terms of Use</a>\
-    </small>\
-  </footer>\
-\
-</body>\
-</html>\
-}
+  <nav class="container-fluid">
+    <ul>
+      <li><strong>Oliver L. Wolcott</strong></li>
+    </ul>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#" role="button">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main class="container">
+    <div class="grid">
+      <section>
+        <hgroup>
+          <h2>Oliver L. Wolcott</h2>
+          <h3>Contact Information</h3>
+        </hgroup>
+        <p>You can reach me directly via email at <a href="mailto:OliverL.Wolcott@owlund.com">OliverL.Wolcott@owlund.com</a>.</p>
+
+        <h3>Social Media</h3>
+        <p>Links coming soon.</p>
+      </section>
+    </div>
+  </main>
+
+  <section aria-label="Subscribe example">
+    <div class="container">
+      <article>
+        <hgroup>
+          <h2>Stay Connected</h2>
+          <h3>Subscribe for future updates</h3>
+        </hgroup>
+        <form class="grid">
+          <input type="text" id="firstname" name="firstname" placeholder="Your name" aria-label="First name" required />
+          <input type="email" id="email" name="email" placeholder="Email address" aria-label="Email address" required />
+          <button type="submit" onclick="event.preventDefault()">Subscribe</button>
+        </form>
+      </article>
+    </div>
+  </section>
+
+  <footer class="container">
+    <small>
+      <a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a>
+    </small>
+  </footer>
+
+</body>
+</html>
