--- a/index.html
+++ b/index.html
@@ -34,25 +34,15 @@
     </div>
   </main>
 
-  <section aria-label="Subscribe example">
-    <div class="container">
-      <article>
-        <hgroup>
-          <h2>Stay Connected</h2>
-          <h3>Subscribe for future updates</h3>
-        </hgroup>
-        <form class="grid">
-          <input type="text" id="firstname" name="firstname" placeholder="Your name" aria-label="First name" required />
-          <input type="email" id="email" name="email" placeholder="Email address" aria-label="Email address" required />
-          <button type="submit" onclick="event.preventDefault()">Subscribe</button>
-        </form>
-      </article>
-    </div>
-  </section>
-
   <footer class="container">
     <small>
       <a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a>
+    </small>
+  </footer>
+
+</body>
+</html>
+
     </small>
   </footer>
 
